# axum-site

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: rust-toolchain.toml
.direnv/: flake-profile-18-link  flake-profile-2-link  flake-profile-6-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2jqpkwdcs6chw8bdypr9149bpmy6ysvs-source  f7lqmx6qy7c89ndw515f5d70sbqirmah-source  imn72cfw379r1pqkkfz91nszis32wvai-source  ww1z96jx2h6cnmdqscqvkrz7hi2fznja-source
.github/workflows/: ci.nix  ci.yml  dbg.yml  errors.yml  warnings.yml
assets/: me.jxl  script.js  styles.css
src/: cme.rs  lsr.rs  main.rs  market_structure.rs  utils.rs
