[package]
name = "axum-site"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

[dependencies]
axum = { version = "^0.8.1", features = ["http2", "macros", "ws"] }
chrono = "^0.4.39"
color-eyre = "^0.6.3"
derive-new = "^0"
function_name = "^0.3.0"
futures = { version = "^0.3.31", features = ["compat"] }
plotly = { version = "^0.12.0", features = ["image", "kaleido"] }
#reqwest = { version = "^0.12.12", features = ["json"] }
serde = { version = "^1.0.217", features = ["derive"] }
serde_json = "^1.0.135"
serde_path_to_error = "^0.1.16"
serde_with = "3.12.0"
tokio = { version = "^1.43.0", features = ["full"] }
tracing = "0.1.41"
v_exchanges = { version = "^0.3.0", path = "../v_exchanges/v_exchanges", features = ["binance", "bybit"] } #ga: rm path
v_utils = { version = "^2.0.2", path = "../v_utils/v_utils", features = ["trades", "io"] } #ga: rm path

[[example]]
name = "test"
path = "src/lsr.rs"
