[package]
name = "axum-site"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"

[dependencies]
axum = { version = "^0.8.1", features = ["http2", "macros", "ws"] }
chrono = "^0.4.39"
chrono-tz = "0.10.1"
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "^0.6.3"
derive-new = "^0"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
function_name = "^0.3.0"
futures = { version = "^0.3.31", features = ["compat"] }
plotly = { version = "^0.12.0", features = ["image", "kaleido"] }
reqwest = "0.12.12"
#reqwest = { version = "^0.12.12", features = ["json"] }
serde = { version = "^1.0.217", features = ["derive"] }
serde_json = "^1.0.137"
serde_path_to_error = "^0.1.16"
serde_with = "3.12.0"
shuttle-runtime = { version = "0.51.0", features = ["api-client-tracing", "tracing-subscriber"] }
tokio = { version = "^1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
v_exchanges = { version = "^0", path = "../v_exchanges/v_exchanges", features = ["binance", "bybit"] } #ga: rm path
v_utils = { version = "^2", path = "../v_utils/v_utils", features = ["trades", "io"] } #ga: rm path
xdg = "2.5.2"

[[example]]
name = "cme"
path = "./src/cme.rs"
